# sl-of-battle

./: README.md  package.json
docs/: WritingGuide.md  character-league.md  imageCleanup.md  requests.md
public/: index.html  manifest.json
src/: index.css  index.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: local_storage_plugin.rs  main.rs
src-tauri/src/local_storage_plugin/: init.tpl.js
src/combatants/: index.js
src/combatants/actress-a/: index.js
src/combatants/actress-b/: index.js
src/combatants/battleship/: AzurLane.js  KantaiCollection.js
src/combatants/disney/: index.js
src/combatants/fighter/: doa.js  tekken.js
src/combatants/isekai/: KonoSuba.js  SwordArt.js  howNotToSummonDemonLord.js
src/combatants/isekai-league/: ranks.js  rookies.js
src/combatants/jav-a/: index.js
src/combatants/jrpg/: FireEmblem.js  GranblueFantasy.js  ranks.js  rookies.js
src/combatants/league-of-legends/: index.js
src/combatants/marvel/: marvel.js
src/combatants/musician/: index.js
src/components/: App.js
src/constants/: index.js  item-id.js  maths.js  palette.js
src/eventText/: dominate.js  fightText.js  fuckRoomText.js  index.js  loseText.js  pleasure.js  replacers.js
src/leagueData/: actress-a.js  actress-b.js  battleship.js  cartoon.js  disney.js  fighter.js  index.js  isekai-league.js  jav-a.js  jrpg.js  leagueOfLegends.js  marvel.js  musician.js  pokemon.js  pornstar-a.js  pornstar-b.js  superhero.js  superpower.js
src/state/: fight.js  index.js
src/utils/: index.js  maths.js
(+63 files in other folders)
