[package]
name = "Sluts-of-Battle"
version = "1.1.0"
description = "Adult sex game"
authors = [ "you" ]
license = ""
repository = ""
default-run = "Sluts-of-Battle"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.9", features = [ "open-dialog", "save-dialog", "write-file", "notification" ] }
tauri-api = "0.7.3"
anyhow = "1.0.32"

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "Sluts-of-Battle"
path = "src/main.rs"
